maj: - script build.sh